# stellarspend-contracts

./: Cargo.toml  DEAD_CODE_TICKETS.md  README.md  TODO.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
contracts/: approval.rs  category.rs  dependencies.rs  governance.rs  history.rs  metadata.rs  overdraft.rs  prediction.rs  preference.rs  snapshots.rs  state.rs  streak_reward.rs  template.rs  threshold.rs  throttling.rs  transactions.rs
contracts/activity-feed/: Cargo.toml
contracts/allowances/: Cargo.toml
contracts/batch-history/: README.md
contracts/batch-payment/: README.md
contracts/batch-token-mint/: Cargo.toml
contracts/benchmarks/: README.md
contracts/escrow/: README.md
contracts/fee/: README.md
contracts/penalty/: mod.rs
contracts/recurring/: mod.rs
contracts/rewards/: Cargo.toml  PR_878_DESCRIPTION.md  PR_DESCRIPTION.md
contracts/savings/: Cargo.toml
contracts/savings-goals/: README.md
contracts/stellarspend-fee/: Cargo.toml  analytics_events.rs  auth.rs  events.rs  fee.rs  lib.rs
contracts/tests/: savings_goals_test.rs  throttling_test.rs
contracts/transfer/: Cargo.toml
contracts/transfer/src/: lib.rs  test.rs
contracts/user/: Cargo.toml
contracts/version/: version_contract.rs
contracts/zk-verifier/: README.md
docs/: ARITHMETIC_AUDIT.md  RECURRING_MODULES.md  gas-reference.md
docs/events/: event-schema.md
docs/security/: negative-amount-audit.md
tests/: governance_tests.rs  security_e2e_tests.rs  supplementary_test.rs  timelock_tests.rs
(+67 files in other folders)
