[package]
name = "transfer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Transfer contract with sanitized description for StellarSpend"

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
shared = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]
